Wrapped searchShows function in search views client side js in setTimeout to limit api calls to search for shows to every 250ms and prevent spamming server also added validation to search button to ensure correct input

--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -4,7 +4,8 @@
   padding: 0;
 }
 
-html, body {
+html,
+body {
   background-color: #d9534f;
   color: rgb(41, 43, 44);
   font-size: 16px;
@@ -41,7 +42,7 @@ nav i {
 
 button {
   display: inline-block;
-  padding: 0.75rem; 
+  padding: 0.75rem;
   font-size: 1.3rem;
   text-transform: capitalize;
   background-color: #d9534f;
@@ -103,8 +104,14 @@ section ul li span {
   overflow-wrap: break-word;
   width: 80%;
   display: block;
-  padding-right: 1rem; 
+  padding-right: 1rem;
   font-size: 1.2rem;
+}
+
+section div {
+  text-align: center;
+  font-size: 1.2rem;
+  display: none;
 }
 
 section ul li button {
